Tensor modifications sections fix

--- a/TeX/src/main.tex
+++ b/TeX/src/main.tex
@@ -243,7 +243,7 @@
     \Definition~\emph{$n$-рангом} тензора $\mathcal{A}$ называют ранг развёртки этого тензора по измерению $n$.
     Обозначение: $\rank_n(\mathcal{A})$.
 
-    Основываясь на свойствах сингулярного разложения высшего порядка (HOSVD), можно доказать следующее утверждение,
+    Основываясь на виде траекторного тензора, можно доказать следующее утверждение,
     позволяющее перенести понятие одномерного ряда конечного ранга на язык траекторных тензоров этого ряда.
     \Statement{(Об $n$-рангах траекторного тензора одномерного ряда конечного ранга)}
     Пусть временной ряд $(x_0, x_1, \ldots, x_{N-1})$ имеет ранг $d$ ($d < N/2$) в терминах SSA,
@@ -265,11 +265,11 @@
     построенная по ряду с номером $p$ с длиной окна $L$:
     \begin{equation}
         \mathcal{H}_{\cdot \cdot p} = \mathbb{H}_L\left(
-        \left( s_0^{(p)}, s_1^{(p)}, \ldots s_{N-1}^{(p)} \right)
+        \left( x_0^{(p)}, x_1^{(p)}, \ldots x_{N-1}^{(p)} \right)
         \right).\label{eq:nd-trajectory-tensor}
     \end{equation}
 
-    Основываясь на свойствах HOSVD, можно доказать следующее утверждение,
+    Основываясь на виде траекторного тензора многомерного ряда, можно доказать следующее утверждение,
     связывающее понятие многомерного ряда конечного ранга и понятие $n$-рангов траекторного тензора этого ряда.
     \Statement{(Об $n$-рангах траекторного тензора многомерного ряда конечного ранга)}
     Пусть временной ряд
@@ -279,36 +279,27 @@
     имеет ранг $d$ в терминах SSA, тогда для траекторного тензора $\mathcal{H}$, построенного по любой длине окна $L<N$
     такой, что ${\min(L, K) \geqslant d}$, выполняется $\rank_1(\mathcal{H})=\rank_2(\mathcal{H})=d$, а $3$-ранг этого тензора
     равен рангу матрицы
-    \[
+    \begin{equation}
         \mathbf{S} =
         \begin{pmatrix}
             x_0^{(1)} & x_1^{(1)} & \ldots & x_{N-1}^{(1)} \\
             x_0^{(2)} & x_1^{(2)} & \ldots & x_{N-1}^{(2)} \\
             \vdots & \vdots & \ldots & \vdots \\
             x_0^{(P)} & x_1^{(P)} & \ldots & x_{N-1}^{(P)}
-        \end{pmatrix}.
-    \]
-
-
-    \razdel{Постановка задачи для одномерного сигнала}
-    Пусть дан одномерный временной ряд, состоящий из $N$ комплексных значений $s_n$, $n=0, 1,\ldots, N-1$,
-    и пусть этот ряд представим в виде конечной суммы $R$ экспоненциально-модулированных комплексных гармоник
-%    \begin{equation}
-%        s_n = \sum_{j=1}^{R} a_j \exp\left\{\iu \varphi_j\right\}
-%        \exp\left\{\left(-\alpha_j + 2 \pi \iu \omega_j\right) n\right\}.\label{eq:1d-complex-model}
-%    \end{equation}
-    Параметрами модели являются амплитуды $a_j$, фазы $\varphi_j$, частоты $\omega_j$ и степени затухания $\alpha_j$.
-    В работе~\cite{papy-esprit} рассматривается задача оценки параметров $\omega_j$ и $\alpha_j$, мы же
-    будем рассматривать задачу оценки значения самого сигнала по временному ряду с шумом.
-    Приведём алгоритм SSA для решения этой задачи.
-
-    Первый этап алгоритма -- вложение, заключается в выборе длины окна $L\geqslant 2R$ так,
-    чтобы $K = N-L+1 \geqslant 2R$, и преобразовании имеющегося временного ряда в ганкелеву матрицу с помощью
-    оператора вложения:
-    \begin{equation}
-        \mathbf{H} = \mathbb{H}_L\left(\left(s_0, s_1, \ldots, s_{N-1}\right)\right).\label{eq:1d-hankel-matrix}
+        \end{pmatrix}.\label{eq:3-rank-matrix}
     \end{equation}
-    Полученная матрица называется \emph{траекторной матрицей ряда}.
+
+    \razdel{Постановка задачи}
+    Пусть дан некоторый временной ряд вида~\eqref{eq:1d-complex-model} или~\eqref{eq:nd-complex-model}.
+    В работе~\cite{papy-esprit} рассматривается задача оценки параметров $\omega_j$ и $\alpha_j$ такого ряда, мы же
+    будем рассматривать задачу оценки значения самого сигнала по временному ряду с шумом.
+
+    \podrazdel{Случай одномерного сигнала}
+    Рассматривается сигнал вида~\eqref{eq:1d-complex-model}.
+    Приведём алгоритм SSA для решения задачи оценки одномерного сигнала по зашумлённому ряду.
+
+    Первый этап алгоритма~-- вложение, заключается в выборе длины окна $1<L<N$ и
+    построении по выбранной длине окна траекторной матрицы $\mathbf{H}$~\eqref{eq:hankelization-operator} данного ряда.
     Эту матрицу можно представить в виде её сингулярного разложения (SVD)
     \begin{equation}
         \mathbf{H}=
@@ -318,16 +309,16 @@
     где $d=\rank(\mathbf{H}) \geqslant \min(L, K)$, $\lambda_j$~-- сингулярные числа матрицы $\mathbf{H}$, а
     матрицы $\mathbf{U}=\left[ U_1 : U_2 : \ldots : U_d \right] \in \mathbb{C}^{L \times d}$ и
     $\mathbf{V}=\left[ V_1 : V_2 : \ldots : V_d \right] \in \mathbb{C}^{K \times d}$ ортонормированные.
-    Из теории SSA~\cite{ssa} известно, что траекторные матрицы, построенные по ряду вида~\eqref{eq:1d-complex-model}
-    с такой длиной окна $L$, что $\min(L, K) \geqslant 2R$, имеют ранг $d=2R$.
-    Если на такой сигнал воздействует шум, то ранг траекторной матрицы будет максимальным, и тогда определяется
-    наилучшее приближение траекторной матрицы матрицей ранга $2R$:
+    Из примера~1 следует, что при некоторых условиях на $N$ и $L$ число $d$ равно количеству уникальных пар
+    параметров $(\alpha_j, \omega_j)$.
+    В частности, если все эти пары разные, то $d=R$.
+    Если на данный сигнал воздействует шум, то ранг траекторной матрицы будет максимальным, и тогда определяется
+    наилучшее приближение траекторной матрицы матрицей некоторого ранга $r \leqslant d$, задаваемого пользователем:
     \begin{equation}
         \widehat{\mathbf{H}}=
-        \sum_{j=1}^{2R} \lambda_j U_j V_j^{(\mathrm{H})}.
+        \sum_{j=1}^{r} \lambda_j U_j V_j^{(\mathrm{H})}.
         \label{eq:1d-best-rank-approx}
     \end{equation}
-
     Последний шаг алгоритма~-- восстановление, заключается в усреднении побочных диагоналей матрицы
     $\widehat{\mathbf{H}}$, то есть
     \begin{equation}
@@ -338,29 +329,15 @@
     $\widehat{h}_{ij}$~-- элементы матрицы $\widehat{\mathbf{H}}$.
     Результат такого усреднения $\widetilde{s}_n$ считается оценкой сигнала $s_n$.
 
-    \razdel{Постановка задачи для многомерного сигнала}
-    Пусть дан набор из $P$ одномерных комплексных временных рядов длины $N$ каждый, и пусть
-    компоненты этих рядов имеют вид
-%    \begin{equation}
-%        s_n^{(p)} = \sum_{j=1}^{R} a_j^{(p)} \exp\left\{\iu \varphi_j^{(p)}\right\}
-%        \exp\left\{\left(-\alpha_j + 2 \pi \iu \omega_j\right) n\right\},
-%        \label{eq:nd-complex-model}
-%    \end{equation}
-%    где $n=0,1,\ldots, N-1$, а $p$ ($1\leqslant p \leqslant P$) отвечает за номер временного ряда.
+    \podrazdel{Случай многомерного сигнала}
+    Пусть дан многомерный временной ряд вида~\eqref{eq:nd-complex-model}.
+    Приведём алгоритм MSSA для решения задачи оценки многомерного сигнала по зашумлённому ряду.
 
-    Приведём алгоритм MSSA для решения задачи оценки многомерного сигнала.
-    На первом шаге каждый из одномерных сигналов $s_n^{(p)}$ преобразуется в траекторную матрицу с длиной окна $L$
-    \begin{equation}
-        \mathbf{H}_p = \mathbb{H}_L\left(\left(s_0^{(p)}, s_1^{(p)}, \ldots, s_{N-1}^{(p)}\right)\right).\label{eq:nd-hankel-matrix}
-    \end{equation}
-    Полученные матрицы укладываются друг за другом вдоль столбцов в одну блочную матрицу
-%    \begin{equation}
-%        \mathbf{H} = [\mathbf{H}_1 : \mathbf{H}_2 : \ldots : \mathbf{H}_P],\label{eq:nd-trajectory-matrix}
-%    \end{equation}
-    называемую \emph{траекторной матрицей многомерного ряда}.
+    На первом шаге выбирается длина окна $L$ и по ней строится траекторная матрица $\mathbf{H}$~\eqref{eq:nd-trajectory-matrix}
+    данного многомерного ряда.
     Дальнейшие шаги алгоритма идентичны одномерному случаю: траекторная матрица $\mathbf{H}$ представляется в виде
     своего сингулярного разложения~\eqref{eq:1d-complex-svd}, затем определяется наилучшее приближение этой матрицы
-    матрицей $\widehat{\mathbf{H}}$ ранга $2R$~\eqref{eq:1d-best-rank-approx}, после чего находятся усреднённые
+    матрицей $\widehat{\mathbf{H}}$ ранга $r$~\eqref{eq:1d-best-rank-approx}, после чего находятся усреднённые
     значения побочных диагоналей этой матрицы~\eqref{eq:1d-diag-averaging}, которые и считаются
     оценками искомого сигнала.
 
@@ -372,45 +349,30 @@
 
     \podrazdel{High-Order SSA}
     Пусть дан одномерный временной ряд вида~\eqref{eq:1d-complex-model}.
-    Вместо траекторной матрицы предлагается строить по ряду \emph{траекторный тензор} $\mathcal{H}$ следующим образом:
-    выбираются два параметра $I, L \geqslant 2R$ такие, что $J \geqslant 2R$ ($J = N- I - L + 2$), и тогда
-    элемент тензора $h_{i l j}$ берётся равным $s_{i+l+j-3}$.
-    Другими словами, слой траекторного тензора с номером $j$ получается как траекторная матрица,
-    построенная по части исходного ряда $\left(s_{j-1}, s_j, \ldots, s_{j+I+L-3}\right)$ с длиной окна $I$:
-%    \begin{equation}
-%        \mathcal{H}_{\cdot \cdot j} = \mathbb{H}_I \left(\left(s_{j-1}, x_j, \ldots, s_{j+I+L-3}  \right)\right).
-%        \label{eq:trajectory-tensor}
-%    \end{equation}
-    На следующем шаге траекторный тензор представляется в виде своего сингулярного разложения высшего порядка
-    (HOSVD)~\cite{hosvd}:
+    На первом шаге алгоритма выбираются два параметра $I, L > 1$, $I+L < N+1$ и по этим длинам окна строится
+    траекторный тензор $\mathcal{H}\in\mathbb{C}^{I\times L \times J}$ ($J = N-I-L+2$)~\eqref{eq:trajectory-tensor}.
+    На следующем шаге траекторный тензор представляется в виде своего сингулярного разложения
+    высшего порядка (HOSVD)~\cite{hosvd}:
     \begin{equation}
         \mathcal{H} = \sum_{i=1}^{d_1} \sum_{l=1}^{d_2} \sum_{j=1}^{d_3} c_{ilj} U^{(1)}_i \circ U^{(2)}_l \circ U^{(3)}_j,
         \label{eq:1d-hosvd}
     \end{equation}
-    где матрицы $\mathbf{U}_k = \left[ U^{(k)}_1, U^{(k)}_2, \ldots, U^{(k)}_{d_k} \right] \in \mathbb{C}^{}$
-    ($I_1=I,\, I_2=L,\, I_3=J$) ортонормированные, а $\circ$ обозначает внешнее произведение векторов.
+    где $d_k=\rank_k(\mathcal{H})$, матрицы $\mathbf{U}_k = \left[ U^{(k)}_1: U^{(k)}_2: \ldots: U^{(k)}_{d_k} \right]
+    \in \mathbb{C}^{I_k \times d_k}$ ($I_1=I,\, I_2=L,\, I_3=J$) ортонормированные,
+    а $\circ$ обозначает внешнее произведение векторов.
 
-    \Definition \emph{Развёрткой} тензора $\mathcal{A}\in \mathbb{C}^{I_1 \times I_2 \times \ldots \times I_M}$
-    по измерению $n$ называют матрицу $\mathbb{A}_{(n)}\in
-    \mathbb{C}^{I_n \times I_{n+1}I_{n+2}\ldots I_{M}I_{1}I_{2}\ldots I_{n-1}}$, в которой элемент исходного тензора
-    $a_{i_1 i_2\ldots i_M}$ содержится в строке $i_n$ и столбце с номером
-    \[
-        1 + \sum_{\substack{k=1 \\ k\ne n}}^{M} \left[ (i_k-1) \prod_{\substack{m=1 \\ m\ne n}}^{k-1} I_m \right].
-    \]
-
-    \Definition \emph{$n$-рангом} тензора $\mathcal{A}$ называют ранг развёртки этого тензора по измерению $n$.
-
-    Если во временном ряде отсутствует шум, то все $n$-ранги траекторного тензора $\mathcal{H}$ будут равны $2R$
-    и верхние пределы суммирования во всех суммах в представлении~\eqref{eq:1d-hosvd} будут равны $2R$.
+    Из примера~1 и утверждения~1 следует, что при некоторых условиях на $N$, $I$ и $L$ все $n$-ранги траекторного
+    тензора $\mathcal{H}$ будут равны количеству уникальных пар параметров $(\alpha_j, \omega_j)$.
     В случае, если во временном ряде присутствует шум, то у траекторного тензора будут максимальные $n$-ранги,
-    и тогда строится приближение траекторного тензора
+    и тогда строится приближение тензора $\mathcal{H}$ тензором $n$-рангов $r\leqslant\min(d_k)$:
     \begin{equation}
-        \widehat{\mathcal{H}} = \sum_{i=1}^{2R} \sum_{l=1}^{2R}
-        \sum_{j=1}^{2R} c_{ilj} U^{(1)}_i \circ U^{(2)}_l \circ U^{(3)}_j.
+        \widehat{\mathcal{H}} = \sum_{i=1}^{r} \sum_{l=1}^{r}
+        \sum_{j=1}^{r} c_{ilj} U^{(1)}_i \circ U^{(2)}_l \circ U^{(3)}_j,
         \label{eq:1d-cropped-hosvd}
     \end{equation}
+    где $r$ задаётся пользователем.
     В работе~\cite{hosvd} показано, что хоть такое приближение и не является оптимальным приближением по множеству
-    тензоров с $n$-рангами, равными $2R$, оно является довольно точным, так как ошибка приближения ограничена сверху.
+    тензоров с $n$-рангами, равными $r$, оно является довольно точным, так как ошибка приближения ограничена сверху.
 
     Последний шаг алгоритма~-- восстановление, заключается в усреднении полученного тензора $\widehat{\mathcal{H}}$
     вдоль побочных <<плоскостей>> ${i+l+j = \operatorname{const}}$:
@@ -424,34 +386,23 @@
 
     \podrazdel{High-Order MSSA}
     Пусть дан многомерный временной ряд вида~\eqref{eq:nd-complex-model}.
-    На первом шаге выбирается длина окна $L \geqslant 2R$ такая, что
-    $K = N-L+1 \geqslant 2R$, и по этому ряду строится
-    \emph{траекторный тензор многомерного ряда} $\mathcal{H}$ так,
-    что его элемент $h_{lkp}$ равен $s_{l+k-2}^{(p)}$, где $1\leqslant l \leqslant L$,
-    $1 \leqslant k \leqslant K$, $1\leqslant p \leqslant P$.
-    То есть слой траекторного тензора с номером $p$ получается как траекторная матрица,
-    построенная по ряду с номером $p$ с длиной окна $L$:
-%    \begin{equation}
-%        \mathcal{H}_{\cdot \cdot p} = \mathbb{H}_L\left(
-%        \left( s_0^{(p)}, s_1^{(p)}, \ldots s_{N-1}^{(p)} \right)
-%        \right).\label{eq:nd-trajectory-tensor}
-%    \end{equation}
+    На первом шаге выбирается длина окна $1<L<N$ и по данному ряду строится
+    траекторный тензор многомерного ряда $\mathcal{H}$~\eqref{eq:nd-trajectory-tensor}.
     Затем траекторный тензор представляется в виде своего HOSVD
     \begin{equation}
-        \mathcal{H} = \sum_{l=1}^{L} \sum_{k=1}^{K} \sum_{p=1}^{P}
+        \mathcal{H} = \sum_{l=1}^{d_1} \sum_{k=1}^{d_2} \sum_{p=1}^{d_3}
         c_{lkp} U^{(1)}_l \circ U^{(2)}_k \circ U^{(3)}_p.
         \label{eq:nd-hosvd}
     \end{equation}
-
-    Если во временном ряде отсутствует шум, то $1$- и $2$-ранги траекторного тензора
-    $\mathcal{H}$ будут равны $2R$, $3$-ранг будет равен $R$,
-    и верхние пределы суммирования в представлении~\eqref{eq:nd-hosvd} будут
-    равны соответствующим $n$-рангам.
-    В случае, если во временном ряде присутствует шум, то у траекторного тензора будут максимальные $n$-ранги,
-    и тогда строится приближение траекторного тензора
+    Из примера~2 и утверждения~2 следует, что при некоторых условиях на $N$ и $L$ $1$- и $2$-ранги траекторного тензора
+    будут равны количеству уникальных пар $(\alpha_j^{(p)}, \omega_j^{(p)})$ по всем $j$ и $p$, а $3$-ранг будет равен
+    рангу матрицы~\eqref{eq:3-rank-matrix}.
+    Если во временном ряде присутствует шум, то у траекторного тензора будут максимальные $n$-ранги,
+    и тогда выбираются параметры $r$ и $r_3$ и строится приближение траекторного тензора с $1$- и $2$-рангами, равными
+    $r$, и $3$-рангом, равным $r_3$:
     \begin{equation}
-        \widehat{\mathcal{H}} = \sum_{l=1}^{2R} \sum_{k=1}^{2R}
-        \sum_{p=1}^{R} c_{lkp} U^{(1)}_l \circ U^{(2)}_k \circ U^{(3)}_p.
+        \widehat{\mathcal{H}} = \sum_{l=1}^{r} \sum_{k=1}^{r} \sum_{p=1}^{r_3}
+        c_{lkp} U^{(1)}_l \circ U^{(2)}_k \circ U^{(3)}_p.
         \label{eq:nd-cropped-hosvd}
     \end{equation}
 
