--- a/TeX/src/main.tex
+++ b/TeX/src/main.tex
@@ -284,7 +284,7 @@
         \begin{pmatrix}
             x_0^{(1)} & x_1^{(1)} & \ldots & x_{N-1}^{(1)} \\
             x_0^{(2)} & x_1^{(2)} & \ldots & x_{N-1}^{(2)} \\
-            \vdots & \vdots & \ldots & \vdots \\
+            \vdots    & \vdots    & \ldots & \vdots        \\
             x_0^{(P)} & x_1^{(P)} & \ldots & x_{N-1}^{(P)}
         \end{pmatrix}.\label{eq:3-rank-matrix}
     \end{equation}
@@ -427,45 +427,89 @@
     где $n=0,1,\ldots, 24$, $\varepsilon_n$~-- последовательность независимых нормальных случайных величин
     со стандартным отклонением $\sigma = 0.03$.
 
-    Сравним точность выделения сигнала при выборе оптимальных для каждого метода длинах окна (для SSA $L = 13$, а для HO-SSA $I=4$ и $L=9$).
+    Сравним точность выделения сигнала при выборе оптимальных для каждого метода длинах окна
+    (для SSA $L = 13$, а для HO-SSA $I=4$ и $L=9$).
 
-    Ранг сигнала в обоих случаях равен 4. Соответственно, число компонент для оценки сигнала будем выбирать равным 4.
+    Из примера~4 следует, что ранг сигнала в обоих случаях равен 4.
+    Соответственно, число компонент для оценки сигнала будем выбирать равным 4.
 
-    В таблице~1 в первых двух столбцах приведены значения RMSE оценок одномерного сигнала~\eqref{eq:1d-comparison} методами
+    В таблице~1 приведены значения RMSE оценок одномерного сигнала~\eqref{eq:1d-comparison} методами
     SSA и HO-SSA.
-    Видно, что метод SSA отделил сигнал с б\`{о}льшей точностью, чем метод HO-SSA, что отличается от результатов в~\cite{papy-esprit}, где тензорный метод оказался точнее для оценки параметров сигнала.
+    Видно, что метод SSA отделил сигнал с б\'{о}льшей точностью, чем метод HO-SSA, что отличается от результатов
+    в~\cite{papy-esprit}, где тензорный метод оказался точнее для оценки параметров сигнала.
 
-    \podrazdel{Многомерный сигнал}
+    \Table{RMSE оценки одномерного сигнала}{|c|c|}{
+        SSA & HO-SSA \nextline
+        $0.0188$ & $0.0197$ \nextline
+    }{}
+
+    \podrazdel{Многомерный сигнал с одинаковыми фазами}
     Пусть временной ряд имеет вид
     \begin{equation}
         \begin{split}
-            x_n^{(p)} = c_1^{(p)} e^{-0.01 n} \cos(2\pi 0.2 n) + c_2^{(p)} e^{-0.02 n} \cos(2\pi 0.22 n) + \varepsilon_n,
+            x_n^{(p)} = c_1^{(p)} e^{-0.01 n} \cos(2\pi 0.2 n) + c_2^{(p)} e^{-0.02 n} \cos(2\pi 0.22 n) + \varepsilon_n^{(p)},
         \end{split}\label{eq:nd-comparison}
     \end{equation}
-    где $n=0,1,\ldots, 24$, $p=1,2,\ldots, 12$, $\varepsilon_n$~-- последовательность независимых нормальных случайных величин
+    где $n=0,1,\ldots, 24$, $p=1,2,\ldots, 12$, $\varepsilon_n^{(p)}$~-- последовательность независимых нормальных случайных величин
     со стандартным отклонением $\sigma = 0.02$.
 
-    Будем сравнивать точность выделения сигнала при выборе оптимальных для каждого метода длинах окна (для SSA $L = 22$, а для HO-SSA $L=20$).
+    Будем сравнивать точность выделения сигнала при выборе оптимальных для каждого метода длинах окна
+    (для MSSA $L = 22$, а для HO-MSSA $L=20$).
 
-    Ранг сигнала в обоих случаях равен 4.
-    Соответственно, число компонент для оценки сигнала будем выбирать равным 4.
-    \Table{RMSE оценки сигнала \label{tab:1d-rmse}}{|c|c|c|c|}{
-        SSA \eqref{eq:1d-comparison}& HO-SSA \eqref{eq:1d-comparison}& MSSA \eqref{eq:nd-comparison}& HO-MSSA \eqref{eq:nd-comparison}\nextline
-        $0.0188$ & $0.0197$ & $0.0107$ & $0.0079$\nextline
+    Ранг сигнала в обоих случаях равен 4, а $3$-ранг траекторного тензора равен 2.
+    Соответственно, число компонент для оценки сигнала в MSSA будем выбирать равным 4, число компонент
+    по первым двум измерениям в HO-MSSA тоже равным 4, а по третьему измерению~-- 2.
+
+    В таблице~2 в первой строке приведены значения RMSE оценок многомерного сигнала~\eqref{eq:nd-comparison} методами
+    MSSA и HO-MSSA.
+    Видно, что метод HO-MSSA отделил сигнал с б\'{о}льшей точностью, чем метод MSSA, что аналогично результатам,
+    полученным в работе~\cite{papy-esprit} для точности оценок параметров сигнала.
+
+    \podrazdel{Многомерный сигнал с линейно меняющимися фазами}
+    Пусть временной ряд имеет вид
+    \begin{equation}
+        \begin{split}
+            x_n^{(p)} = c_1^{(p)} e^{-0.01 n} \cos(2\pi 0.2 n + p \pi / 6)
+            + c_2^{(p)} e^{-0.02 n} \cos(2\pi 0.22 n + p \pi / 9) + \varepsilon_n^{(p)},
+        \end{split}\label{eq:nd-comparison-lin-phase}
+    \end{equation}
+    где $n=0,1,\ldots, 24$, $p=1,2,\ldots, 12$, $\varepsilon_n^{(p)}$~-- последовательность независимых нормальных случайных величин
+    со стандартным отклонением $\sigma = 0.02$.
+
+    Будем сравнивать точность выделения сигнала при выборе оптимальных для каждого метода длинах окна
+    (для обоих методов оптимальное $L = 21$).
+
+    Ранг сигнала в обоих случаях равен 4, а $3$-ранг траекторного тензора равен 4.
+    Соответственно, число компонент для оценки сигнала в MSSA будем выбирать равным 4 и
+    число компонент по всем измерениям в HO-MSSA тоже равным 4.
+
+    \Table{RMSE оценки многомерного сигнала}{|l|c|c|}{
+         & MSSA & HO-MSSA \nextline
+        сигнал~\eqref{eq:nd-comparison} & $0.0107$ & $0.0079$ \nextline
+        сигнал~\eqref{eq:nd-comparison-lin-phase} & $0.00924$ & $0.00918$ \nextline
     }{}
+%    \Table{RMSE оценки сигнала \label{tab:1d-rmse}}{|c|c|c|c|}{
+%        SSA~\eqref{eq:1d-comparison} & HO-SSA~\eqref{eq:1d-comparison} & MSSA~\eqref{eq:nd-comparison} & HO-MSSA~\eqref{eq:nd-comparison}\nextline
+%        $0.0188$ & $0.0197$ & $0.0107$ & $0.0079$\nextline
+%        - & - & $0.00924$ & $0.00918$ \nextline
+%    }{}
 %    \Table{RMSE оценки многомерного сигнала}{|c|c|}{
 %    MSSA & HO-MSSA \nextline
 %    $0.0107$ & $0.0079$ \nextline
 %    }{}
-    В третьем и четвертом столбцах таблицы~1 приведены значения RMSE оценок многомерного сигнала~\eqref{eq:nd-comparison} методами
-    MSSA и HO-MSSA.
-    Видно, что метод HO-MSSA отделил сигнал с б\`{о}льшей точностью, чем метод MSSA, что аналогично результатам, полученным
-    в работе~\cite{papy-esprit} для точности оценок параметров сигнала.
+    Во второй строке таблицы~2 приведены значения RMSE оценок многомерного сигнала~\eqref{eq:nd-comparison-lin-phase}
+    методами MSSA и HO-MSSA.
+    Видно, что метод HO-MSSA отделил сигнал с б\'{о}льшей точностью, чем метод MSSA, однако это преимущество
+    уменьшилось по сравнению со случаем равных фаз.
+%    В третьем и четвертом столбцах таблицы~1 приведены значения RMSE оценок многомерного сигнала~\eqref{eq:nd-comparison} методами
+%    MSSA и HO-MSSA.
+%    Видно, что метод HO-MSSA отделил сигнал с б\'{о}льшей точностью, чем метод MSSA, что аналогично результатам, полученным
+%    в работе~\cite{papy-esprit} для точности оценок параметров сигнала.
 
     \razdel{Заключение}
     В результате работы было показано, что тензорный вариант HO-SSA дал точность хуже, чем обычный SSA. Поэтому не рекомендуется использовать HO-SSA, если нужно оценить сигнал. Однако для многомерного сигнала было выявлено преимущество рассматриваемой тензорной модификации.
 
-    Соответственно, в следующих исследованиях имеет смысл развивать теорию метода HO-MSSA для увеличения точность оценивания сигнала и его компонент.
+    Соответственно, в следующих исследованиях имеет смысл развивать теорию метода HO-MSSA для увеличения точности оценивания сигнала и его компонент.
 
 
     %%    \Table{Нумерованная таблица}{|p{1cm}|p{3cm}|p{3cm}|}{
