--- a/TeX/src/main.tex
+++ b/TeX/src/main.tex
@@ -224,23 +224,39 @@
     \podrazdel{Тензорные ранги}
     Введём вспомогательные определения.
     \Definition~\emph{Траекторным тензором одномерного временного ряда $(x_0, x_1, \ldots, x_{N-1})$ с длинами окна $I$ и $L$}
-    называется
-    тензор $\mathcal{H}\in \mathbb{C}^{I\times L \times J}$ ($J = N-I-L+2$), элемент $h_{ilj}$ которого равен
-    $x_{i+l+j-3}$.
-    Другими словами, слой траекторного тензора с номером $j$ получается как траекторная матрица,
+    называется тензор $\mathcal{H}\in \mathbb{C}^{I\times L \times J}$ ($J = N-I-L+2$),
+    элемент $h_{ilj}$ которого равен $x_{i+l+j-3}$.
+%    у которого слой по третьему измерению с номером $j$ получается как траекторная матрица,
+%    построенная по части исходного ряда $\left(x_{j-1}, x_j, \ldots, x_{j+I+L-3}\right)$ с длиной окна $I$:
+    Другими словами, слой по третьему измерению траекторного тензора с номером $j$ получается как траекторная матрица,
     построенная по части исходного ряда $\left(x_{j-1}, x_j, \ldots, x_{j+I+L-3}\right)$ с длиной окна $I$:
     \begin{equation}
         \mathcal{H}_{\cdot \cdot j} = \mathbb{H}_I \left(\left(x_{j-1}, x_j, \ldots, x_{j+I+L-3}  \right)\right).
         \label{eq:trajectory-tensor}
     \end{equation}
-    \Definition~\emph{Развёрткой} тензора $\mathcal{A}\in \mathbb{C}^{I_1 \times I_2 \times \ldots \times I_M}$
-    по измерению $n$ называют матрицу $\mathbb{A}_{(n)}\in
-    \mathbb{C}^{I_n \times I_{n+1}I_{n+2}\ldots I_{M}I_{1}I_{2}\ldots I_{n-1}}$, в которой элемент исходного тензора
-    $a_{i_1 i_2\ldots i_M}$ содержится в строке $i_n$ и столбце с номером
-    \[
-        1 + \sum_{\substack{k=1 \\ k\ne n}}^{M} \left[ (i_k-1) \prod_{\substack{m=1 \\ m\ne n}}^{k-1} I_m \right].
-    \]
-    \Definition~\emph{$n$-рангом} тензора $\mathcal{A}$ называют ранг развёртки этого тензора по измерению $n$.
+%    \Definition~\emph{Развёрткой} тензора $\mathcal{A}\in \mathbb{C}^{I_1 \times I_2 \times \ldots \times I_M}$
+%    по измерению $n$ называют матрицу $\mathbb{A}_{(n)}\in
+%    \mathbb{C}^{I_n \times I_{n+1}I_{n+2}\ldots I_{M}I_{1}I_{2}\ldots I_{n-1}}$, в которой элемент исходного тензора
+%    $a_{i_1 i_2\ldots i_M}$ содержится в строке $i_n$ и столбце с номером
+%    \[
+%        1 + \sum_{\substack{k=1 \\ k\ne n}}^{M} \left[ (i_k-1) \prod_{\substack{m=1 \\ m\ne n}}^{k-1} I_m \right].
+%    \]
+    \Definition~\emph{Векторами тензора $\mathcal{A} \in \mathbb{C}^{I_1\times I_2 \times \ldots \times I_M}$ по
+    измерению $n$} называются векторы вида
+    $\left(\left( a_{i_1 i_2 \ldots i_{n-1} k i_{n+1} \ldots i_M} \right)_{k=1}^{I_n}\right)^\mathrm{T}$,
+    где индексы $i_j$ фиксированы.
+%    \Definition~\emph{Векторами тензора $\mathcal{A} \in \mathbb{C}^{I_1\times I_2 \times \ldots \times I_M}$ вдоль
+%    измерения $n$} называются векторы вида $\left(a_1, a_2, \ldots, a_{I_n} \right)^\mathrm{T}$,
+%    где $a_j = \mathcal{A}_{i_1 i_2 \ldots i_{n-1} j i_{n+1} \ldots i_M}$, а индексы $i_k$ фиксированы.
+%    \Definition~\emph{Векторами тензора $\mathcal{A} \in \mathbb{C}^{I_1\times I_2 \times \ldots \times I_M}$ по
+%    измерению $n$} называются векторы вида $\left(\hat{a}_1, \hat{a}_2, \ldots, \hat{a}_{I_n} \right)^\mathrm{T}$,
+%    где $\hat{a}_j = a_{i_1 i_2 \ldots i_{n-1} j i_{n+1} \ldots i_M}$ и индексы $i_k$ ($k\ne n$) фиксированы.
+%    \Definition~\emph{Векторами тензора $\mathcal{A}$ по
+%    измерению $n$} называются векторы, получаемые варьированием индекса с номером $n$ при фиксированных остальных.
+%    \Definition~\emph{$n$-рангом} тензора $\mathcal{A}$ называют ранг развёртки этого тензора по измерению $n$.
+%    Обозначение: $\rank_n(\mathcal{A})$.
+    \Definition~\emph{$n$-рангом} тензора $\mathcal{A}$ называют размерность линейной оболочки, построенной
+    по векторам этого тензора по измерению $n$.
     Обозначение: $\rank_n(\mathcal{A})$.
 
     Основываясь на виде траекторного тензора, можно доказать следующее утверждение,
@@ -278,16 +294,16 @@
     \]
     имеет ранг $d$ в терминах SSA, тогда для траекторного тензора $\mathcal{H}$, построенного по любой длине окна $L<N$
     такой, что ${\min(L, K) \geqslant d}$, выполняется $\rank_1(\mathcal{H})=\rank_2(\mathcal{H})=d$, а $3$-ранг этого тензора
-    равен рангу матрицы
-    \begin{equation}
-        \mathbf{S} =
-        \begin{pmatrix}
-            x_0^{(1)} & x_1^{(1)} & \ldots & x_{N-1}^{(1)} \\
-            x_0^{(2)} & x_1^{(2)} & \ldots & x_{N-1}^{(2)} \\
-            \vdots    & \vdots    & \ldots & \vdots        \\
-            x_0^{(P)} & x_1^{(P)} & \ldots & x_{N-1}^{(P)}
-        \end{pmatrix}.\label{eq:3-rank-matrix}
-    \end{equation}
+    равен рангу матрицы, в строках которой записаны заданные одномерные ряды.
+%    \begin{equation}
+%        \mathbf{S} =
+%        \begin{pmatrix}
+%            x_0^{(1)} & x_1^{(1)} & \ldots & x_{N-1}^{(1)} \\
+%            x_0^{(2)} & x_1^{(2)} & \ldots & x_{N-1}^{(2)} \\
+%            \vdots    & \vdots    & \ldots & \vdots        \\
+%            x_0^{(P)} & x_1^{(P)} & \ldots & x_{N-1}^{(P)}
+%        \end{pmatrix}.\label{eq:3-rank-matrix}
+%    \end{equation}
 
     \razdel{Постановка задачи}
     Пусть дан некоторый временной ряд вида~\eqref{eq:1d-complex-model} или~\eqref{eq:nd-complex-model}.
@@ -396,7 +412,7 @@
     \end{equation}
     Из примера~2 и утверждения~2 следует, что при некоторых условиях на $N$ и $L$ $1$- и $2$-ранги траекторного тензора
     будут равны количеству уникальных пар $(\alpha_j^{(p)}, \omega_j^{(p)})$ по всем $j$ и $p$, а $3$-ранг будет равен
-    рангу матрицы~\eqref{eq:3-rank-matrix}.
+    рангу матрицы, в строках которой записаны заданные одномерные ряды..
     Если во временном ряде присутствует шум, то у траекторного тензора будут максимальные $n$-ранги,
     и тогда выбираются параметры $r$ и $r_3$ и строится приближение траекторного тензора с $1$- и $2$-рангами, равными
     $r$, и $3$-рангом, равным $r_3$:
@@ -428,16 +444,13 @@
     со стандартным отклонением $\sigma = 0.03$.
 
     Сравним точность выделения сигнала при выборе оптимальных для каждого метода длинах окна
-    (для SSA $L = 13$, а для HO-SSA $I=4$ и $L=9$).
-
+    (для SSA $L = 13$, для HO-SSA $I=4$ и $L=9$).
     Из примера~4 следует, что ранг сигнала в обоих случаях равен 4.
     Соответственно, число компонент для оценки сигнала будем выбирать равным 4.
-
     В таблице~1 приведены значения RMSE оценок одномерного сигнала~\eqref{eq:1d-comparison} методами
     SSA и HO-SSA.
     Видно, что метод SSA отделил сигнал с б\'{о}льшей точностью, чем метод HO-SSA, что отличается от результатов
     в~\cite{papy-esprit}, где тензорный метод оказался точнее для оценки параметров сигнала.
-
     \Table{RMSE оценки одномерного сигнала}{|c|c|}{
         SSA & HO-SSA \nextline
         $0.0188$ & $0.0197$ \nextline
@@ -454,12 +467,10 @@
     со стандартным отклонением $\sigma = 0.02$.
 
     Будем сравнивать точность выделения сигнала при выборе оптимальных для каждого метода длинах окна
-    (для MSSA $L = 22$, а для HO-MSSA $L=20$).
-
+    (для MSSA $L = 22$, для HO-MSSA $L=20$).
     Ранг сигнала в обоих случаях равен 4, а $3$-ранг траекторного тензора равен 2.
     Соответственно, число компонент для оценки сигнала в MSSA будем выбирать равным 4, число компонент
     по первым двум измерениям в HO-MSSA тоже равным 4, а по третьему измерению~-- 2.
-
     В таблице~2 в первой строке приведены значения RMSE оценок многомерного сигнала~\eqref{eq:nd-comparison} методами
     MSSA и HO-MSSA.
     Видно, что метод HO-MSSA отделил сигнал с б\'{о}льшей точностью, чем метод MSSA, что аналогично результатам,
@@ -469,8 +480,8 @@
     Пусть временной ряд имеет вид
     \begin{equation}
         \begin{split}
-            x_n^{(p)} = c_1^{(p)} e^{-0.01 n} \cos(2\pi 0.2 n + p \pi / 6)
-            + c_2^{(p)} e^{-0.02 n} \cos(2\pi 0.22 n + p \pi / 9) + \varepsilon_n^{(p)},
+            x_n^{(p)} = &c_1^{(p)} e^{-0.01 n} \cos(2\pi 0.2 n + p \pi / 6)\\
+            + &c_2^{(p)} e^{-0.02 n} \cos(2\pi 0.22 n + p \pi / 9) + \varepsilon_n^{(p)},
         \end{split}\label{eq:nd-comparison-lin-phase}
     \end{equation}
     где $n=0,1,\ldots, 24$, $p=1,2,\ldots, 12$, $\varepsilon_n^{(p)}$~-- последовательность независимых нормальных случайных величин
@@ -478,11 +489,9 @@
 
     Будем сравнивать точность выделения сигнала при выборе оптимальных для каждого метода длинах окна
     (для обоих методов оптимальное $L = 21$).
-
     Ранг сигнала в обоих случаях равен 4, а $3$-ранг траекторного тензора равен 4.
     Соответственно, число компонент для оценки сигнала в MSSA будем выбирать равным 4 и
     число компонент по всем измерениям в HO-MSSA тоже равным 4.
-
     \Table{RMSE оценки многомерного сигнала}{|l|c|c|}{
          & MSSA & HO-MSSA \nextline
         сигнал~\eqref{eq:nd-comparison} & $0.0107$ & $0.0079$ \nextline
