--- a/TeX/src/main_short.tex
+++ b/TeX/src/main_short.tex
@@ -92,10 +92,12 @@
     аналогичных тем, что были рассмотрены в~\cite{papy-esprit}.
 
 
-    В разделе 2 опишем модель рассматриваемых сигналов. В разделе 3 определим траекторную матрицу и траекторный тензор, а также дадим определение ранга сигнала. В этом разделе приведено утверждение о соотношении между матричным и тензорным рангами сигнала.
-    В разделе 4 коротко опишем метод MSSA и его тензорную модификация HO-MSSA для задачи выделения сигнала. 
+    В разделе~2 опишем модель рассматриваемых сигналов.
+    В разделе~3 определим траекторную матрицу и траекторный тензор, а также дадим определение ранга сигнала.
+    В этом разделе приведено утверждение о соотношении между матричным и тензорным рангами сигнала.
+    В разделе~4 коротко опишем метод MSSA и его тензорную модификацию HO-MSSA для задачи выделения сигнала.
     Описание во всех разделах будет дано в более общей комплексной форме, хотя применять метод мы будем в вещественном случае.
-    В разделе 5 описаны результаты численных сравнений.
+    В разделе~5 описаны результаты численных сравнений.
 
     \razdel{Модель сигнала} \label{sec:model}
     Опишем рассматриваемые многомерные комплексные сигналы.
@@ -222,7 +224,7 @@
     \]
     \emph{с длиной окна $L$} называется тензор $\mathcal{H}\in\mathbb{C}^{L\times K \times P}$ ($K = N-L+1$),
     элемент $h_{lkp}$ которого равен $x_{l+k-2}^{(p)}$.
-    То есть слой траекторного тензора с номером $p$ получается как траекторная матрица,
+    То есть слой траекторного тензора с номером $p$ по третьему измерению получается как траекторная матрица,
     построенная по ряду с номером $p$ с длиной окна $L$:
     \begin{equation}
         \mathcal{H}_{\cdot \cdot p} = \mathbb{H}_L\left(
@@ -264,17 +266,18 @@
     Эту матрицу можно представить в виде её сингулярного разложения (SVD)
     \begin{equation}
         \mathbf{H}=
-        \sum_{j=1}^{d} \lambda_j U_j V_j^{(\mathrm{H})},
+        \sum_{j=1}^{d} \sigma_j U_j V_j^{\mathrm{H}},
         \label{eq:1d-complex-svd}
     \end{equation}
-    где $d=\rank(\mathbf{H}) \geqslant \min(L, K)$, $\lambda_j$~-- сингулярные числа матрицы $\mathbf{H}$, а
+    где $d=\rank(\mathbf{H}) \geqslant \min(L, K)$, $\sigma_j$~-- сингулярные числа матрицы $\mathbf{H}$,
+    верхний индекс $\mathrm{H}$ обозначает эрмитово сопряжение, а
     матрицы $\mathbf{U}=\left[ U_1 : U_2 : \ldots : U_d \right] \in \mathbb{C}^{L \times d}$ и
-    $\mathbf{V}=\left[ V_1 : V_2 : \ldots : V_d \right] \in \mathbb{C}^{K \times d}$ ортонормированные.
+    $\mathbf{V}=\left[ V_1 : V_2 : \ldots : V_d \right] \in \mathbb{C}^{K \times d}$ унитарные.
 
     Если на данный сигнал воздействует шум, то траекторная матрица будет матрицей полного ранга и тогда рассматривается наилучшее приближение траекторной матрицы матрицей заданного ранга $r \leqslant d$:
     \begin{equation}
         \widehat{\mathbf{H}}=
-        \sum_{j=1}^{r} \lambda_j U_j V_j^{(\mathrm{H})}.
+        \sum_{j=1}^{r} \sigma_j U_j V_j^{\mathrm{H}}.
         \label{eq:1d-best-rank-approx}
     \end{equation}
     Последний шаг алгоритма~-- восстановление, заключается в усреднении каждой матрицы $\widehat{\mathbf{H}}_p$ по побочным диагоналям, то есть
@@ -300,21 +303,21 @@
         c_{lkp} U^{(1)}_l \circ U^{(2)}_k \circ U^{(3)}_p.
         \label{eq:nd-hosvd}
     \end{equation}
-    Из примера~2 и утверждения~2 следует, что при некоторых условиях на $N$ и $L$ $1$- и $2$-ранги траекторного тензора
+    Из примера~2 и утверждения~1 следует, что при некоторых условиях на $N$ и $L$ $1$- и $2$-ранги траекторного тензора
     будут равны количеству уникальных пар $(\alpha_j^{(p)}, \omega_j^{(p)})$ по всем $j$ и $p$, а $3$-ранг будет равен
-    рангу матрицы, в строках которой записаны заданные одномерные ряды..
+    рангу матрицы, в строках которой записаны заданные одномерные ряды.
     Если во временном ряде присутствует шум, то у траекторного тензора будут максимальные $n$-ранги,
     и тогда выбираются параметры $r$ и $r_3$ и строится приближение траекторного тензора с $1$- и $2$-рангами, равными
     $r$, и $3$-рангом, равным $r_3$:
     \begin{equation}
         \widehat{\mathcal{H}} = \sum_{l=1}^{r} \sum_{k=1}^{r} \sum_{p=1}^{r_3}
-        c_{lkp} U^{(1)}_l \circ U^{(2)}_k \circ U^{(3)}_p.
+        \sigma_{lkp} U^{(1)}_l \circ U^{(2)}_k \circ U^{(3)}_p.
         \label{eq:nd-cropped-hosvd}
     \end{equation}
 
     Последний шаг алгоритма аналогичен по смыслу шагу восстановления в алгоритме
-    MSSA и заключается в усреднении полученного приближения $\widehat{\mathcal{H}}$
-    вдоль побочных <<плоскостей>> ${l+k+p = \operatorname{const}}$.
+    MSSA и заключается в усреднении матриц-слоёв $\widehat{\mathcal{H}}_{\cdot \cdot p}$ полученного приближения
+    вдоль побочных диагоналей ${l+k = \operatorname{const}}$.
 
     \razdel{Численные сравнения}
     В данном разделе приведем результаты численных сравнений метода MSSA с его тензорным аналогом
@@ -323,7 +326,7 @@
     реализациям шума.
     Методы сравнивались на одних и тех же реализациях шума, все различия значимы при уровне значимости $\alpha = 0.05$.
 
-    \podrazdel{Многомерный сигнал с одинаковыми фазами}
+    \podrazdel{Сигнал с одинаковыми фазами}
     Пусть временной ряд имеет вид
     \begin{equation}
         \begin{split}
@@ -333,7 +336,7 @@
     где $n=0,1,\ldots, 24$, $p=1,2,\ldots, 12$, $\varepsilon_n^{(p)}$~-- последовательность независимых нормальных случайных величин
     со стандартным отклонением $\sigma = 0.02$.
 
-    Будем сравнивать точность выделения сигнала при выборе оптимальных для каждого метода длинах окна
+    Будем сравнивать точность выделения сигнала при выборе оптимальных для каждого метода длин окна
     (для MSSA $L = 22$, для HO-MSSA $L=20$).
     Ранг сигнала в обоих случаях равен 4, а $3$-ранг траекторного тензора равен 2.
     Соответственно, число компонент для оценки сигнала в MSSA будем выбирать равным 4, число компонент
@@ -343,7 +346,7 @@
     Видно, что метод HO-MSSA отделил сигнал с б\'{о}льшей точностью, чем метод MSSA, что аналогично результатам,
     полученным в работе~\cite{papy-esprit} для точности оценок параметров сигнала.
 
-    \podrazdel{Многомерный сигнал с линейно меняющимися фазами}
+    \podrazdel{Сигнал с линейно меняющимися фазами}
     Пусть временной ряд имеет вид
     \begin{equation}
         \begin{split}
@@ -354,7 +357,7 @@
     где $n=0,1,\ldots, 24$, $p=1,2,\ldots, 12$, $\varepsilon_n^{(p)}$~-- последовательность независимых нормальных случайных величин
     со стандартным отклонением $\sigma = 0.02$.
 
-    Будем сравнивать точность выделения сигнала при выборе оптимальных для каждого метода длинах окна
+    Будем сравнивать точность выделения сигнала при выборе оптимальных для каждого метода длин окна
     (для обоих методов оптимальное $L = 21$).
     Ранг сигнала в обоих случаях равен 4, а $3$-ранг траекторного тензора равен 4.
     Соответственно, число компонент для оценки сигнала в MSSA будем выбирать равным 4 и
